# open-blood-analysis

./: .env.example  .gitignore  .todo  README.md  biomarkers.json  config.json  pyproject.toml
app/: agent.py  ai_client.py  computed.py  config.py  database.py  interpretation.py  llm.py  loader.py  logic.py  main.py  resolution.py  semantics.py  types.py
app/extraction/: __init__.py  fusion.py  orchestrator.py  types.py
app/extraction/engines/: __init__.py  base.py  gemini_vision.py  liteparse_text.py  openai_compatible_vision.py
tests/: test_agent.py  test_ai_client.py  test_computed.py  test_database.py  test_extraction.py  test_llm_parser.py  test_logic.py  test_main.py  test_resolution.py
tests/integration/: benchmark.py  extraction_benchmark.py  run_benchmark.sh  run_extraction_benchmark.sh
tests/integration/golden/doctor-frankfurt/: raw_llm_output.json
tests/integration/golden/mayerlab-asuncion/: biomarkers_after.json  output.json  raw_llm_output.json
tests/integration/golden/metals-bangkok/: raw_llm_output.json
tests/integration/golden/pathlab-johor/: raw_llm_output.json
tests/integration/golden/prameka-canguu/: raw_llm_output.json
