[project]
name = "open-blood-analysis"
version = "0.0.1"
description = "Open Blood Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.20.3",
    "openai>=2.16.0",
    "pdf2image>=1.17.0",
    "pydantic>=2.12.5",
    "rapidfuzz>=3.14.3",
    "typer>=0.21.1",
    "simpleeval>=0.9.13",
]

[project.scripts]
blood-analysis = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
